--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,15 @@ os:
     - osx
 env:
     global:
-        - LD_LIBRARY_PATH: /usr/local/lib
+        - secure: lArE1cuRyp8OVugatua33YfPqzB8tj+5wq+MvCns9Bah2Uz8CpVgQqFIxGi1aIWQsvOoGMeI4EGNwWnLPm66quEwCinl5gmg+AMcHJygjSi3T28SSjvEWyfunBvBe2X+sQ2woLM2Bvl5bOuxZ9Y4giNcjLXCVFxaqcUOH4U9RIc=
 before_script:
     - rustc -v
     - cargo -V
 script:
     - cargo build -v
     - cargo test -v
+    - cargo doc -v
+after_success:
+    - cp -R target/doc doc
+    - curl http://www.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh
+    - rm -r doc
