--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,6 @@ git = "https://github.com/pistondevelopers/vecmath"
 git = "https://github.com/PistonDevelopers/input"
 #version = "0.0.5"
 
+[dependencies.cgmath]
+git = "https://github.com/bjz/cgmath-rs"
+#version = "0.0.4"
