--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 
 name = "piston3d-cam"
-version = "0.0.4"
+version = "0.0.5"
 authors = [
     "bvssvni <bvssvni@gmail.com>",
     "eddyb"
 ]
-keywords = ["cam", "3d", "perspective", "first-person"]
+keywords = ["cam", "3d", "perspective", "first-person", "piston"]
 description = "A library for 3D camera and navigation"
 license = "MIT"
 readme = "README.md"
