Upgraded to latest Rust
Closes https://github.com/PistonDevelopers/cam/issues/54

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,6 @@ git = "https://github.com/pistondevelopers/vecmath"
 [dependencies.quaternion]
 git = "https://github.com/PistonDevelopers/quaternion.git"
 #version = "0.0.5"
+
+[dependencies]
+num = "0.1.21"
