--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "piston3d-cam"
-version = "0.0.7"
+version = "0.0.8"
 authors = [
     "bvssvni <bvssvni@gmail.com>",
     "eddyb"
@@ -18,10 +18,6 @@ homepage = "https://github.com/pistondevelopers/cam"
 name = "cam"
 path = "src/lib.rs"
 
-[dependencies.vecmath]
-git = "https://github.com/pistondevelopers/vecmath"
-#version = "0.0.22"
-
-[dependencies.quaternion]
-git = "https://github.com/PistonDevelopers/quaternion.git"
-#version = "0.0.6"
+[dependencies]
+vecmath = "0.0.23"
+quaternion = "0.0.7"
